--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">\
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
@@ -35,6 +35,27 @@
                  <input type="button" value="Download">
             </div>
         
+        </div>
+    </div>
+
+    <div class="viewpoint">
+        <div class="viewparent">
+            <div class="view-disscription">
+                <div class="discription-body">
+                    <h1>Build fast, responsive sites with Bootstrap</h1>
+                <p>Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit,
+                     featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+
+                     <div class="view-button">
+                    <input type="button" value="Get Started" class="blue-button">
+                    <input type="button" value="Download" class="white-button">
+                </div>
+                </div>
+                
+            </div>
+            <div class="view-image">
+                <img src="img/Capture.PNG" alt="">
+            </div>
         </div>
     </div>
 </body>
