added logo to for eaeasy understanding

--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
                 </div>
             </div>
         </div>
-
+        <div class="comdes">
+            <img src="img/Capture coddde.PNG" alt="">
+        </div>
         <div class="instalation-section">
+            
             <div class="installation-body">
                 <div class="installation-discription">
                     <h1>Installation</h1>
