work done so far, going out to flex

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         </div>
 
         <div class="instalation-section">
+
+            <div class="addedlogo">
+                <img src="gt" alt="">
+            </div>
             <div class="installation-body">
                 <div class="installation-discription">
                     <h1>jsDelivr</h1>
@@ -125,6 +129,7 @@
                 </div>
             </div>
         </div>
+
 
 
     </body>
