after my flexing i build the remaining three layers, will merge this later

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="instalation-section">
 
             <div class="addedlogo">
-                <img src="gt" alt="">
+                <img src="img/Capture jquery.PNG" alt="">
             </div>
             <div class="installation-body">
                 <div class="installation-discription">
@@ -129,6 +129,56 @@
                 </div>
             </div>
         </div>
+
+        <div class="instalation-section">
+
+            <div class="addedlogo">
+                <img src="img/capture boostrap.PNG" alt="">
+            </div>
+            <div class="installation-body">
+                <div class="installation-discription">
+                    <h1>Bootstrap Icons</h1>
+                    <h5> For the first time ever, Bootstrap has its own open
+                        source SVG icon library, designed to work best with our
+                        components and documentation.</h5>
+                    <p>Bootstrap Icons are designed to work best with Bootstrap
+                        components, but they’ll work in any project. They’re
+                        SVGs, so they scale quickly and easily, can be
+                        implemented in several ways, and can be styled with CSS.</p>
+                    <button> Get Bootstrap Icon</button>
+                </div>
+                <div class="installation-sourceCode">
+                    <div class="code11">
+                        <img src="img/bootstrap-icons.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="instalation-section">
+
+            <div class="addedlogo">
+                <img src="img/Capture theme.PNG" alt="">
+            </div>
+            <div class="installation-body">
+                <div class="installation-discription">
+                    <h1>Official Themes</h1>
+                    <h5> Take Bootstrap to the next level with premium themes
+                        from <a href="">the official Bootstrap Themes
+                            marketplace.</a></h5>
+                    <p>Themes are built on Bootstrap as their own extended
+                        frameworks, rich with new components and plugins,
+                        documentation, and powerful build tools.</p>
+                    <button> Browse Theme</button>
+                </div>
+                <div class="installation-sourceCode">
+                    <div class="code11">
+                        <img src="img/bootstrap-themes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
 
