the footer build option for modification

--- a/index.html
+++ b/index.html
@@ -179,6 +179,24 @@
             </div>
         </div>
 
+        <div class="footer">
+            <div class="footerbody">
+                <div class="footermain1">
+                    <a href=""> GitHub </a>
+                    <a href=""> Twitter </a>
+                    <a href=""> Examples </a>
+                    <a href=""> About </a>
+                </div>
+                <div class="footermain2">
+                    <p>Designed and built with all the love in the world by the
+                        Bootstrap team with the help of our contributors.
+                        <strong>boostrap Team</strong> Currently v5.0.0-beta3.
+                        Code licensed MIT, docs CC BY
+                        3.0.</p>
+                </div>
+            </div>
+        </div>
+
 
 
 
